--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "typescript": "^4.0.5"
